feat: added all responses
