# src/responses/vaccinesDetailCountResponse.ts
@@ -1,9 +1,11 @@
-export interface DoseDistributionByAgeGroupSqlResult {
+export interface VaccinesDetailCountSqlResult {
   vaccine: string;
   age_group: string;
-  dose_order: string;
+  dose: string;
   sex: string;
-  applications: Number;
+  count: Number;
+  city: string;
+  province: string;
 }
 
 const getSex = (sex: string) => {
@@ -12,21 +14,25 @@ const getSex = (sex: string) => {
   return 'Sin identificar';
 };
 
-export class DoseDistributionByAgeGroup {
+export class VaccinesDetailCountResponse {
   public vaccine: string;
   public ageGroup: string;
-  public doseOrder: string;
+  public dose: string;
   public sex: string;
-  public applications: Number;
+  public count: Number;
+  public city: string;
+  public province: string;
 
-  constructor(result: DoseDistributionByAgeGroupSqlResult) {
+  constructor(result: VaccinesDetailCountSqlResult) {
     this.vaccine = result.vaccine;
     this.ageGroup =
       result.age_group !== 'S.I.'
         ? result.age_group + ' años'
         : result.age_group;
-    this.doseOrder = 'Dosis nro ' + String(result.dose_order);
+    this.dose = 'Dosis nro ' + String(result.dose);
     this.sex = getSex(result.sex);
-    this.applications = Number(result.applications);
+    this.count = Number(result.count);
+    this.city = result.city;
+    this.province = result.province;
   }
 }
